# solder

./: AGENTS.md  Cargo.toml  README.md  shell.nix
src/: dep_graph.rs  elf_reader.rs  extractor.rs  jump_table.rs  layout.rs  lib_discovery.rs  main.rs  patcher.rs  relocator.rs  symbol_analysis.rs  types.rs  writer.rs
test/: README.md  grep.test
