[package]
name = "solder"
license = "Unlicense"
version = "0.2.0"
edition = "2024"
# Someone already took this crate name
publish = false

[[bin]]
name = "solder"
path = "src/main.rs"

[dependencies]
object = { version = "0.39", features = ["read_core", "elf"] }
goblin = "0.10"
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
indexmap = "2"
petgraph = "0.8"
iced-x86 = { version = "1.21.0", features = ["decoder", "instr_info"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
